Initial demo/poc system.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+## Go stuff
+
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
 *.so
 *.dylib
 
@@ -20,3 +16,18 @@
 # Go workspace file
 go.work
 go.work.sum
+
+## Python stuff
+__pycache__
+/sandbox
+.idea
+*~
+.venv
+venv
+.vscode
+.coverage
+/.tox
+.*.swp
+
+## simulator stuff
+charm.log
